--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic-native/wheel-selector": "5.0.0-beta.15",
     "@ionic/angular": "^4.0.0",
     "angularfire2": "^5.1.1",
+    "chart.js": "^2.7.3",
     "cordova-browser": "5.0.4",
     "cordova-ios": "4.5.5",
     "cordova-plugin-camera": "^4.0.3",
@@ -47,7 +48,10 @@
     "cordova-wheel-selector-plugin": "^1.1.2",
     "core-js": "^2.6.5",
     "firebase": "^5.8.3",
-    "rxjs": "~6.3.3",
+    "ionic-angular": "^3.9.3",
+    "ng2-charts": "^1.6.0",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
